deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  k8s-app
  labels:
    app:  k8s-app
spec:
  selector:
    matchLabels:
      app: k8s-app
  replicas: 1
  template:
    metadata:
      labels:
        app:  k8s-app
    spec:
      containers:
      - name:  k8s-app
        image:  k8s-app:latest
        imagePullPolicy: Never
        # resources:
        #   requests:
        #     cpu: 10m
        #     memory: 100Mi
        #   limits:
        #     cpu: 40m
        #     memory: 100Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort:  80
          name:  k8s-app
      restartPolicy: Always
