deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app
  namespace: default
spec:
  selector:
    app: k8s-app
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: k8s-app
    protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort:
